# FilteredJSON

./: CMakeLists.txt  CMakePresets.json  Readme.md
.github/workflows/: build.yaml  build.yml
app/: CMakeLists.txt  main.cpp
include/filteredjson/: filter.hpp  json.hpp  parser.hpp
src/: filter.cpp  json.cpp  parser.cpp
tests/: CMakeLists.txt
